--- a/index.html
+++ b/index.html
@@ -11,10 +11,61 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Simple Tailwind Starter</title>
+    <title>Loopstudio</title>
   </head>
   <body>
-    <h1 class="mb-4 text-4xl">Welcome</h1>
-    <p>Start building your Tailwind project</p>
+    <!-- Hero section -->
+    <section id="hero">
+      <!-- Hero section container -->
+      <div class="container mx-auto max-w-6xl py-12 px-6">
+        <!-- Menu/Logo container -->
+        <nav class="flex items-center justify-between font-bold text-white">
+          <!-- Logo -->
+          <img src="images/logo.svg" alt="Logo" />
+          <!-- Menu -->
+          <div class="hidden h-10 font-alata md:flex md:space-x-8">
+            <div class="group">
+              <a href="#">About</a>
+              <div
+                class="mx-2 group-hover:border-b group-hover:border-blue-50"
+              ></div>
+            </div>
+            <div class="group">
+              <a href="#">Careers</a>
+              <div
+                class="mx-2 group-hover:border-b group-hover:border-blue-50"
+              ></div>
+            </div>
+            <div class="group">
+              <a href="#">Events</a>
+              <div
+                class="mx-2 group-hover:border-b group-hover:border-blue-50"
+              ></div>
+            </div>
+            <div class="group">
+              <a href="#">Products</a>
+              <div
+                class="mx-2 group-hover:border-b group-hover:border-blue-50"
+              ></div>
+            </div>
+            <div class="group">
+              <a href="#">Support</a>
+              <div
+                class="mx-2 group-hover:border-b group-hover:border-blue-50"
+              ></div>
+            </div>
+          </div>
+
+          <!-- :TODO: Hamburger button -->
+        </nav>
+
+        <!-- TODO: Mobile menu -->
+        <div
+          class="mt-32 mb-32 max-w-lg border-2 p-4 font-sans text-4xl uppercase text-white md:m-32 md:mx-0 md:p-10 md:text-6xl"
+        >
+          Impressive experiences that deliver
+        </div>
+      </div>
+    </section>
   </body>
 </html>
