--- a/index.html
+++ b/index.html
@@ -67,5 +67,36 @@
         </div>
       </div>
     </section>
+
+    <!-- Feature section -->
+    <section id="feature">
+      <!-- Feature container -->
+      <div
+        class="container relative mx-auto my-32 flex max-w-6xl flex-col px-6 text-gray-900 md:flex-row md:px-0"
+      >
+        <!-- Images -->
+        <img
+          src="images/desktop/image-interactive.jpg"
+          alt="Interactive image"
+        />
+
+        <!-- Text container -->
+        <div
+          class="top-48 bg-white pr-0 md:absolute md:right-0 md:py-20 md:pl-20"
+        >
+          <h2
+            class="mx-auto mt-10 max-w-lg text-center font-sans text-4xl uppercase text-gray-900 md:mt-0 md:text-left md:text-5xl"
+          >
+            The leader in the interactive VR
+          </h2>
+          <p class="mx-auto max-w-md text-center md:mx-0 md:text-left">
+            Founded in 2011, Looopstudios has been producing world-class virtual
+            reality projects for some of the best companies around the globe.
+            Our award-winning creations have transformed businesses through
+            digital experiences that bind to their brand.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
