--- a/index.html
+++ b/index.html
@@ -98,5 +98,190 @@
         </div>
       </div>
     </section>
+
+    <!-- Creations section -->
+    <section id="creations">
+      <!-- Creations container -->
+      <div class="container mx-auto my-32 max-w-6xl px-6 text-gray-900">
+        <!-- Creations header -->
+        <div class="mb-20 flex justify-center md:justify-between">
+          <h2 class="text-center text-4xl uppercase md:text-left md:text-5xl">
+            Our creations
+          </h2>
+          <button class="btn hidden md:block">See all</button>
+        </div>
+
+        <!-- Items container 1 -->
+        <div class="item-container">
+          <!-- Item 1 -->
+          <div class="item group">
+            <!-- Desktop image -->
+            <img
+              src="images/desktop/image-deep-earth.jpg"
+              alt=""
+              class="hidden w-full duration-200 group-hover:scale-110 md:block"
+            />
+            <!-- Mobile image -->
+            <img
+              src="images/mobile/image-deep-earth.jpg"
+              alt=""
+              class="w-full duration-200 group-hover:scale-110 md:hidden"
+            />
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>Deep earth</h5>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="item group">
+            <!-- Desktop image -->
+            <img
+              src="images/desktop/image-night-arcade.jpg"
+              alt=""
+              class="hidden w-full duration-200 group-hover:scale-110 md:block"
+            />
+            <!-- Mobile image -->
+            <img
+              src="images/mobile/image-night-arcade.jpg"
+              alt=""
+              class="w-full duration-200 group-hover:scale-110 md:hidden"
+            />
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>Night arcade</h5>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="item group">
+            <!-- Desktop image -->
+            <img
+              src="images/desktop/image-soccer-team.jpg"
+              alt=""
+              class="hidden w-full duration-200 group-hover:scale-110 md:block"
+            />
+            <!-- Mobile image -->
+            <img
+              src="images/mobile/image-soccer-team.jpg"
+              alt=""
+              class="w-full duration-200 group-hover:scale-110 md:hidden"
+            />
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>Soccer team VR</h5>
+          </div>
+
+          <!-- Item 4 -->
+          <div class="item group">
+            <!-- Desktop image -->
+            <img
+              src="images/desktop/image-grid.jpg"
+              alt=""
+              class="hidden w-full duration-200 group-hover:scale-110 md:block"
+            />
+            <!-- Mobile image -->
+            <img
+              src="images/mobile/image-grid.jpg"
+              alt=""
+              class="w-full duration-200 group-hover:scale-110 md:hidden"
+            />
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>The grid</h5>
+          </div>
+        </div>
+
+        <!-- Items container 2 -->
+        <div class="item-container mt-10">
+          <!-- Item 1 -->
+          <div class="item group">
+            <!-- Desktop image -->
+            <img
+              src="images/desktop/image-from-above.jpg"
+              alt=""
+              class="hidden w-full duration-200 group-hover:scale-110 md:block"
+            />
+            <!-- Mobile image -->
+            <img
+              src="images/mobile/image-from-above.jpg"
+              alt=""
+              class="w-full duration-200 group-hover:scale-110 md:hidden"
+            />
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>From up above VR</h5>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="item group">
+            <!-- Desktop image -->
+            <img
+              src="images/desktop/image-pocket-borealis.jpg"
+              alt=""
+              class="hidden w-full duration-200 group-hover:scale-110 md:block"
+            />
+            <!-- Mobile image -->
+            <img
+              src="images/mobile/image-pocket-borealis.jpg"
+              alt=""
+              class="w-full duration-200 group-hover:scale-110 md:hidden"
+            />
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>Pocket borealis</h5>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="item group">
+            <!-- Desktop image -->
+            <img
+              src="images/desktop/image-curiosity.jpg"
+              alt=""
+              class="hidden w-full duration-200 group-hover:scale-110 md:block"
+            />
+            <!-- Mobile image -->
+            <img
+              src="images/mobile/image-curiosity.jpg"
+              alt=""
+              class="w-full duration-200 group-hover:scale-110 md:hidden"
+            />
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>The curiosity</h5>
+          </div>
+
+          <!-- Item 4 -->
+          <div class="item group">
+            <!-- Desktop image -->
+            <img
+              src="images/desktop/image-fisheye.jpg"
+              alt=""
+              class="hidden w-full duration-200 group-hover:scale-110 md:block"
+            />
+            <!-- Mobile image -->
+            <img
+              src="images/mobile/image-fisheye.jpg"
+              alt=""
+              class="w-full duration-200 group-hover:scale-110 md:hidden"
+            />
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>Make it fisheye</h5>
+          </div>
+        </div>
+
+        <!-- Bottom button container -->
+        <div class="mt-10 flex justify-center md:hidden">
+          <button class="btn md:hidded w-full">See all</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
