--- a/index.html
+++ b/index.html
@@ -283,5 +283,122 @@
         </div>
       </div>
     </section>
+
+    <footer class="bg-black">
+      <!-- Container -->
+      <div class="mx-w-6xl container mx-auto py-10">
+        <!-- Footer flex container -->
+        <div
+          class="mb-8 flex flex-col items-center space-y-6 px-10 md:flex-row md:items-start md:justify-between md:space-y-0"
+        >
+          <!-- Menu & copy container -->
+          <div
+            class="flex flex-col items-center space-y-8 md:items-start md:space-y-4"
+          >
+            <!-- Logo -->
+            <div class="h-8">
+              <img src="images/logo.svg" alt="" class="w-44 md:ml-3" />
+            </div>
+            <!-- Menu container -->
+            <div
+              class="flex flex-col items-center space-y-4 font-bold text-white md:ml-3 md:flex-row md:space-y-0 md:space-x-6"
+            >
+              <!-- Item 1 -->
+              <div class="group h-10">
+                <div class="group h-10">
+                  <a href="#">About</a>
+                  <div
+                    class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                  ></div>
+                </div>
+              </div>
+
+              <!-- Item 2 -->
+              <div class="group h-10">
+                <div class="group h-10">
+                  <a href="#">Careers</a>
+                  <div
+                    class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                  ></div>
+                </div>
+              </div>
+
+              <!-- Item 3 -->
+              <div class="group h-10">
+                <div class="group h-10">
+                  <a href="#">Events</a>
+                  <div
+                    class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                  ></div>
+                </div>
+              </div>
+
+              <!-- Item 4 -->
+              <div class="group h-10">
+                <div class="group h-10">
+                  <a href="#">Products</a>
+                  <div
+                    class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                  ></div>
+                </div>
+              </div>
+
+              <!-- Item 5 -->
+              <div class="group h-10">
+                <div class="group h-10">
+                  <a href="#">Support</a>
+                  <div
+                    class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                  ></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Social and copy container -->
+          <div
+            class="flex flex-col items-start justify-between space-y-4 text-gray-500"
+          >
+            <!-- Icons container -->
+            <div
+              class="mx-auto flex items-center justify-center space-x-4 md:mx-0 md:justify-end"
+            >
+              <!-- Icon 1 -->
+              <div class="group h-8">
+                <a href="#">
+                  <img src="images/icon-facebook.svg" alt="" class="h-6" />
+                </a>
+              </div>
+
+              <!-- Icon 2 -->
+              <div class="group h-8">
+                <a href="#">
+                  <img src="images/icon-twitter.svg" alt="" class="h-6" />
+                </a>
+              </div>
+
+              <!-- Icon 3 -->
+              <div class="group h-8">
+                <a href="#">
+                  <img src="images/icon-pinterest.svg" alt="" class="h-6" />
+                </a>
+              </div>
+
+              <!-- Icon 4 -->
+              <div class="group h-8">
+                <a href="#">
+                  <img src="images/icon-instagram.svg" alt="" class="h-6" />
+                </a>
+              </div>
+            </div>
+
+            <!-- Copy -->
+            <div class="font-bold">
+              &copy; 2022 Loopstudios. All rights reserved.
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
